# fake-news-detection

./: .env.example  .gitignore  Makefile  README.md  TODO_LIST.md  config.py  download_fakenewsnet.py  exceptions.py  main.py  mock_server.py  patch_env.py  pipeline_test_results.txt  planning-notes.md  pyproject.toml  requirements-data.txt  requirements-model.txt  requirements-ui.txt  requirements.txt  run_pipeline.sh  schemas.py  security.py  server.py  test_api_out.txt  test_baseline_quick.py  test_ensemble_compare.py  test_ensemble_difference.py  test_ensemble_full.py  test_gemini_api.py  test_model_pipeline.py  test_pipeline_nvidia.py  test_vifactcheck_100.py  train_cv_comparison.py  train_cv_simple.py  verity.bat  verity.py  verity.sh
.ccw/specs/: architecture-constraints.md  coding-conventions.md  quality-rules.md
.github/workflows/: docs.yml  release-canary.yml  release.yml  visual-tests.yml
.review-cycle/: review-state.json
.review-cycle/dimensions/: architecture.json  maintainability.json  quality.json
.review-cycle/reports/: FINAL-SUMMARY.md  architecture-analysis.md
agents/: __init__.py  agent_pipeline.py  claim_extractor.py  evidence_searcher.py  knowledge_base.py  reasoning_scorer.py
data/: __init__.py  create_mock_data.py  datamodule.py  dataset.py  preprocessing.py
data/crawler/: __init__.py
data/datasets/: __init__.py
dataset/: README.md  __init__.py  collect_news.py  download_datasets.py  feature_extraction.py  manager.py  merge_datasets.py  preprocess_vietnamese.py
docs/demo/: demo_script.md
docs/report/: report_outline.md
docs/slides/: presentation.md
evaluation/: __init__.py  ablation_study.py  confusion_matrix.py  evaluate_models.py
model/: ENSEMBLE_README.md  PREDICTOR_README.md  TRAINING_README.md  __init__.py  baseline_logreg.py  config.yaml  curriculum_scheduler.py  domain_classifier.py  drift_monitor.py  ensemble.py  explanation_generator.py  interfaces.py  mock_predictor.py  phobert.py  phobert_baseline.py  phobert_with_features.py  prediction_cache.py  predictor.py  test_ensemble.py  test_predictor.py  train.py  train_curriculum.py  train_phobert.py  train_phobert.py_fixed_head  weight_optimizer.py
notebooks/: Verity_End_to_End.ipynb  eval_multiagent_vifactcheck.ipynb  test_system_colab.ipynb  train_colab.ipynb  train_cv_comparison.ipynb  train_model.ipynb  train_phobert_vifactcheck.ipynb  train_tfidf_vifactcheck.ipynb
scratch/: test_pipeline_quick.py
sequential_adversarial/: crewai_demo.py  input_processor.py  llm_client.py  models.py  pipeline.py  plan.md
sequential_adversarial/data/: verity_reports.db
tests/: conftest.py  test_agents.py  test_baseline_model.py  test_config.py  test_dataset_impl.py  test_evaluation.py  test_gemini_api.py  test_input_processor.py  test_llm_client.py  test_mock_server.py  test_models.py  test_phobert.py  test_pipeline_url.py  test_schemas.py  test_sequential_adversarial.py  test_train_phobert.py
ui/: __init__.py  app.py
ui/components/: __init__.py  attention_heatmap.py  domain_badge.py  evidence_card.py  score_display.py  score_gauge.py  shap_highlight.py  source_panel.py  word_cloud_viz.py
ui/styles/: custom.css
